--- a/package.json
+++ b/package.json
@@ -4,9 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/mini-css-extract-plugin": "^1.4.3",
+    "@types/webpack-dev-server": "^3.11.4",
     "@workadventure/iframe-api-typings": "^1.2.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "eslint": "^7.24.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.9",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-polyfill-webpack-plugin": "^1.1.2",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.1.0",
+    "svelte": "^3.38.2",
+    "svelte-check": "^2.1.0",
+    "svelte-loader": "^3.1.1",
+    "svelte-preprocess": "^4.7.3",
     "ts-loader": "^8.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
@@ -16,10 +31,13 @@
     "webpack-merge": "^5.7.3"
   },
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack --config webpack.prod.js",
+    "start": "run-p serve svelte-check-watch",
+    "serve": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack.json\" webpack serve --open",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack.json\" NODE_ENV=production webpack",
     "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
     "lint": "node_modules/.bin/eslint src/ . --ext .ts",
-    "fix": "node_modules/.bin/eslint --fix src/ . --ext .ts"
+    "fix": "node_modules/.bin/eslint --fix src/ . --ext .ts",
+    "svelte-check-watch": "svelte-check --fail-on-warnings --fail-on-hints --compiler-warnings \"a11y-no-onchange:ignore,a11y-autofocus:ignore,a11y-media-has-caption:ignore\" --watch",
+    "svelte-check": "svelte-check --fail-on-warnings --fail-on-hints --compiler-warnings \"a11y-no-onchange:ignore,a11y-autofocus:ignore,a11y-media-has-caption:ignore\""
   }
 }
